# name: test_group_from_path[ctx-bar]
  <class 'list'> [
  ]
---
# name: test_group_from_path[ctx-foo]
  <class 'list'> [
  ]
---
# name: test_group_from_path[filter-kwarg-desc-bar]
  <class 'list'> [
  ]
---
# name: test_group_from_path[filter-kwarg-desc-foo]
  <class 'list'> [
  ]
---
# name: test_group_from_path[no-filter-kwargs-bar]
  <class 'list'> [
    "MagicTodo(desc='Item is due:2022-01-31.', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
  ]
---
# name: test_group_from_path[no-filter-kwargs-foo]
  <class 'list'> [
    "MagicTodo(desc='We also ignore double ++pluses and double @@at signs. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
  ]
---
